# cubic-sphere

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md
incl/: base.h  camera.h  cube.h  demo.h  gui.h  nullspace.h  object.h  ocl.h  sphere.h  time-sampler.h  tools.h
src/: camera.cpp  cube.cpp  demo.cpp  gui.cpp  main.cpp  nullspace.cpp  ocl.cpp  sphere.cpp  tools.cpp
src/shaders/: basic-col3d.vert  basic.frag  basic3d.vert
